Users Module Structure

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ 
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 12vh;
+  opacity: 60%;
 }
 
-.App-link {
-  color: #61dafb;
+.App-bodyback
+{
+  width: 100%;
+  height: 100%;
+  background-image: url("/public/1_nwpp_back.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-bodyback-overlay
+{
+  
+  backdrop-filter: blur(3px);
+}
+
+.App-body-content
+{
+  background-color: white;
+  height: 100%;
 }
