--- a/src/assets/css/navigation.css
+++ b/src/assets/css/navigation.css
@@ -12,15 +12,19 @@
 
 .nav-button
 {
-    padding-top: 1.5vw;
-    padding-bottom: 1.5vw;
-    padding-left: 1.5vw;
-    padding-right: 1.5vw;
     border: 0px;
     color: rgb(223, 65, 65);
-    background-color: white;
     font-size: large;
     font-family: BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+}
+
+.navigation-Navlink
+{
+    color: black;
+}
+.navigation-Navlink:hover
+{
+    color: white;
 }
 
 .nav-button:hover
@@ -31,4 +35,15 @@
     padding-left: 1.6vw;
     padding-right: 1.6vw;
     cursor: pointer;
+}
+
+.top-navbar
+{
+    background-color: rgb(255, 249, 249);
+}
+
+.navbar-buttons-container
+{
+    margin-left: auto;
+    text-align: right;
 }
