--- a/src/assets/css/user_module.css
+++ b/src/assets/css/user_module.css
@@ -11,11 +11,12 @@
 {
     margin-left: auto;
     margin-right: auto;
-    border-radius: 30px;
+    border-radius: 5px;
     padding: 2vw;
     width: fit-content;
     min-width: 90%;
     background-color: rgb(247, 244, 244);
+    margin-bottom: 1vw;
 }
  
 .user_module_table td
@@ -33,6 +34,9 @@ tr:nth-child(even)
 {
     padding-top: 0;
     margin-top: 0;
+    margin-left: 1vw;
+    margin-bottom: 1vw;
+    font-weight: bold;
     color: rgb(223, 65, 65);
     font-family: BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
 }
@@ -55,3 +59,23 @@ tr:nth-child(even)
     cursor: pointer;
 }
 
+.small_button
+{
+    margin-left: auto;
+    margin-right: auto;
+    border: 0px;
+    background-color: white;
+    border-radius: 10%;
+}
+
+.edit_button
+{
+    border: 1px solid rgb(223, 65, 65);
+    color: rgb(223, 65, 65);
+}
+
+.delete_button
+{
+    background-color: rgb(223, 65, 65);
+    color: white;
+}
