--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,10 @@
   width: 100%;
   height: 100%;
   background-image: url("/public/1_nwpp_back.jpg");
-  background-size: cover;
+  background-size: 100% 100%;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 .App-bodyback-overlay
