--- a/src/assets/css/user_module.css
+++ b/src/assets/css/user_module.css
@@ -44,7 +44,7 @@ tr:nth-child(even)
 .user-create-button
 {
     border: 0px;
-    background-color: rgb(223, 65, 65);
+    background-color: rgb(223, 65, 65) !important;
     color: white;
     text-align: center;
     padding: 15px;
@@ -55,7 +55,6 @@ tr:nth-child(even)
 {
     border: 1px solid rgb(223, 65, 65);
     background-color: white;
-    color: rgb(223, 65, 65);
     cursor: pointer;
 }
 
