Routing and format fixes

--- a/src/assets/css/user_module.css
+++ b/src/assets/css/user_module.css
@@ -131,3 +131,9 @@ tr:nth-child(even)
     text-align: justify;
     padding: 2vw;
 }
+
+.row
+{
+    margin-right: auto;
+    margin-left: auto;
+}
